--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,11 @@
 # Utilise l'image officielle de Nginx
 FROM nginx:alpine
 
-# Copie les fichiers du front-end dans un répertoire temporaire
-COPY . /tmp/frontend/
-
-# Liste le contenu de /tmp/frontend/ pour vérifier si les fichiers sont là
-RUN ls -al /tmp/frontend/
-
-# Déplace les fichiers vers /home/whamdi/goinfre dans le conteneur
-RUN mv /tmp/frontend/* /home/whamdi/goinfre/
+# Copie les fichiers dans le répertoire par défaut de Nginx
+COPY . /usr/share/nginx/html
 
 # Expose le port 80
 EXPOSE 80
 
-# Change le répertoire de travail pour Nginx afin qu'il serve les fichiers
-WORKDIR /home/whamdi/goinfre
+# Démarre Nginx en mode non-démon
+CMD ["nginx", "-g", "daemon off;"]
