Initalisation docker compose -> WIP

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@
 FROM nginx:alpine
 
 # Copie les fichiers dans le répertoire par défaut de Nginx
-COPY . /usr/share/nginx/html
+COPY . /usr/share/nginx/html/
 
 # Expose le port 80
 EXPOSE 80
