--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
+    "cors": "^2.8.5",
     "fastify": "^3.29.5",
     "sqlite3": "^5.1.7"
   },
