--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,11 @@ services:
 
   nginx:
     build:
-      context: ./frontend # Chemin vers le répertoire contenant ton Dockerfile Nginx
+      context: ./frontend
     ports:
-      - "8082:80"  # Mappe le port 80 du conteneur au port 80 de ta machine
+      - "8082:80"
     volumes:
       - ./frontend:/usr/share/nginx/html
+      - ./frontend/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./frontend/default.conf:/etc/nginx/conf.d/default.conf:ro
+
