--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,8 @@ FROM nginx:alpine
 
 # Copie les fichiers dans le répertoire par défaut de Nginx
 COPY . /usr/share/nginx/html/
-
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY default.conf /etc/nginx/conf.d/default.conf
 # Expose le port 80
 EXPOSE 80
 
