--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       context: ./frontend
     ports:
       - "8082:80"
-      - "8443:443"  # Port HTTPS exposé
+      - "8443:443"  # Port HTTPS expose
     volumes:
       - ./frontend:/usr/share/nginx/html
       - ./frontend/nginx.conf:/etc/nginx/nginx.conf:ro
