--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
 		"@fastify/cors": "^11.0.1",
 		"fastify": "^5.2.2",
 		"fastify-bcrypt": "^1.0.1",
+		"jsonwebtoken": "^9.0.2",
 		"nodemon": "^3.1.9",
 		"sqlite3": "^5.1.7",
 		"ts-node": "^10.9.2"
