--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,16 +11,13 @@ services:
     environment:
       - NODE_ENV=development
 
-  nginx:
+  frontend:
     build:
       context: ./frontend
-    ports:
-      - "8082:80"
-      - "8443:443"  # Port HTTPS expose
     volumes:
-      - ./frontend:/usr/share/nginx/html
-      - ./frontend/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./frontend/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./certs:/etc/nginx/certs:ro  # ✅ Montage du dossier des certificats
+      - ./frontend:/app
+      - ./certs:/certs
+    ports:
+      - "3020:3020"
     depends_on:
       - node-app
