--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "vite": "^6.3.0"
   },
   "dependencies": {
-    "crypto-browserify": "^3.12.1"
+    "@tailwindcss/vite": "^4.1.4",
+    "crypto-browserify": "^3.12.1",
+    "tailwindcss": "^4.1.4"
   }
 }
