--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,11 @@
     "typescript": "~5.7.2",
     "vite": "^6.3.0"
   },
-  "dependencies": {  
-    "google-auth-library": "^9.15.1"
+  "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "crypto-browserify": "^3.12.1",
+    "google-auth-library": "^9.15.1",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^4.1.4"
   }
 }
