--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
 		"dotenv": "^16.4.7",
 		"fastify": "^5.2.2",
 		"fastify-bcrypt": "^1.0.1",
+		"fastify-mailer": "^2.3.1",
 		"jsonwebtoken": "^9.0.2",
+		"nodemailer": "^6.10.1",
 		"nodemon": "^3.1.9",
 		"sqlite3": "^5.1.7",
 		"ts-node": "^10.9.2"
