--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/postcss": "^4.1.4",
     "@types/node": "^22.14.0",
     "autoprefixer": "^10.4.21",
+    "tailwindcss-animated": "^2.0.0",
     "typescript": "~5.7.2",
     "vite": "^6.3.0"
   },
