--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
+    "@types/aos": "^3.0.7",
     "@types/node": "^22.14.0",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.21",
     "tailwindcss-animated": "^2.0.0",
     "typescript": "~5.7.2",
