--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
 		"@fastify/cookie": "^11.0.2",
 		"@fastify/cors": "^11.0.1",
 		"@fastify/jwt": "^9.1.0",
+		"@fastify/multipart": "^9.0.3",
 		"dotenv": "^16.4.7",
 		"fastify": "^5.2.2",
 		"fastify-bcrypt": "^1.0.1",
