--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "@tailwindcss/vite": "^4.1.4",
     "crypto-browserify": "^3.12.1",
     "google-auth-library": "^9.15.1",
+    "sleep-ts": "^0.1.1",
     "tailwind": "^4.0.0",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "usleep": "^1.0.3"
   }
 }
