--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
 		"ts-node": "^10.9.2"
 	},
 	"devDependencies": {
+		"@fastify/websocket": "^11.0.2",
 		"@types/node": "^22.13.14",
 		"typescript": "^5.8.2"
 	}
