--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
 		"fastify": "^5.2.2",
 		"fastify-bcrypt": "^1.0.1",
 		"fastify-mailer": "^2.3.1",
+		"fastify-websocket": "^4.2.2",
 		"jsonwebtoken": "^9.0.2",
 		"nodemailer": "^6.10.1",
 		"nodemon": "^3.1.9",
