--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,16 @@
 		"fastify": "^5.2.2",
 		"fastify-bcrypt": "^1.0.1",
 		"fastify-mailer": "^2.3.1",
+		"install": "^0.13.0",
 		"jsonwebtoken": "^9.0.2",
 		"nodemailer": "^6.10.1",
 		"nodemon": "^3.1.9",
+		"npm": "^11.3.0",
 		"sqlite3": "^5.1.7",
 		"ts-node": "^10.9.2"
 	},
 	"devDependencies": {
+		"@fastify/static": "^8.1.1",
 		"@types/node": "^22.13.14",
 		"typescript": "^5.8.2"
 	}
