--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,14 @@
 		"fastify-websocket": "^4.2.2",
 		"install": "^0.13.0",
 		"jsonwebtoken": "^9.0.2",
+		"multipart": "^0.1.5",
 		"nodemailer": "^6.10.1",
 		"nodemon": "^3.1.9",
 		"npm": "^11.3.0",
 		"sqlite3": "^5.1.7",
-		"ts-node": "^10.9.2"
+		"static": "^2.0.0",
+		"ts-node": "^10.9.2",
+		"websocket": "^1.0.35"
 	},
 	"devDependencies": {
 		"@fastify/static": "^8.1.1",
