--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
 		"@fastify/cors": "^11.0.1",
 		"@fastify/jwt": "^9.1.0",
 		"@fastify/multipart": "^9.0.3",
-		"dotenv": "^16.4.7",
+		"dotenv": "^16.5.0",
+		"ethers": "^6.14.0",
 		"fastify": "^5.2.2",
 		"fastify-bcrypt": "^1.0.1",
 		"fastify-mailer": "^2.3.1",
@@ -30,6 +31,7 @@
 		"@fastify/static": "^8.1.1",
 		"@fastify/websocket": "^11.0.2",
 		"@types/node": "^22.13.14",
+		"hardhat": "^2.24.0",
 		"typescript": "^5.8.2"
 	}
 }
